objects/ContactRelationship__c.object
<CustomObject>
    <fields>
        <fullName>AESurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AE Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASCS_Broker_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ASCS Broker Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASCS_CO_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ASCS CO ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASCS_Contract_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ASCS Contract Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASCS_External_Id__c</fullName>
        <description>External Id for the purposes of ASCS Load.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>External Id for the purposes of ASCS Load.</inlineHelpText>
        <label>ASCS External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Relationships</relationshipLabel>
        <relationshipName>Contact_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AffiliationName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If not Employer-Related, Name of Charity, Association and Affiliation</inlineHelpText>
        <label>Affiliation Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Client_Conference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Client Conference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biiling_Contact_and_Group_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Biiling Contact and Group Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Address_City__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Address_Country__c</fullName>
        <formula>Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Address_State__c</fullName>
        <formula>Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Address State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Address_Street__c</fullName>
        <formula>Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Address Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Address_Zip__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Address Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Broker Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Round_Table__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Round Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAGCallParticipationOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAG Call Participation Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client Advisory Group Contact</description>
        <label>CAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAG_old__c</fullName>
        <formula>Contact__r.CAG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAG_Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Client Information Collaborative</inlineHelpText>
        <label>CIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CONTCANCEL__c</fullName>
        <formula>IF((ISBLANK( EndDate__c ) = FALSE &amp;&amp;  EndDate__c  &lt; TODAY()) || (ISBLANK( NEW_BSNS_TERM_DT__c ) = FALSE &amp;&amp;  NEW_BSNS_TERM_DT__c  &lt; TODAY()), &quot;Cancelled&quot;, &quot;Active&quot;)</formula>
        <label>CONTCANCEL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCAGStartDate_old__c</fullName>
        <formula>Account__r.ClientCAGStartDate__c</formula>
        <label>Client CAG Start Date_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientNewsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_CAG_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client CAG Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Executive_Sponsor_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Executive Sponsor Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Secondary_Exec_Sponsor_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Secondary Exec Sponsor Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClinicalLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ConnectionType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>How is the Contact Related to the Contact and the Account</inlineHelpText>
        <label>Connection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsultantNews__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsultantSummit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant Summit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Name__c</fullName>
        <formula>FirstName__c &amp;&quot; &quot;&amp; LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>To select more than one contact type, hold the control (ctrl) key and select the values.</inlineHelpText>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem Account Service Rep</fullName>
                </value>
                <value>
                    <fullName>Anthem Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Anthem Secondary Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CHRO</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Finance/CFO</fullName>
                </value>
                <value>
                    <fullName>Group Administrator</fullName>
                </value>
                <value>
                    <fullName>HIPAA Privacy Officer</fullName>
                </value>
                <value>
                    <fullName>HIPAA Rep</fullName>
                </value>
                <value>
                    <fullName>HR Mgr/Dir</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>MEU Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pathways to Health</fullName>
                </value>
                <value>
                    <fullName>President/CEO</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Region Dir</fullName>
                </value>
                <value>
                    <fullName>Third Party Admin</fullName>
                </value>
                <value>
                    <fullName>TPA Account Manager</fullName>
                </value>
                <value>
                    <fullName>TPA Claims Analyst</fullName>
                </value>
                <value>
                    <fullName>TPA Client Liaison</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account To Contact Relationships</relationshipLabel>
        <relationshipName>Contact_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateLastUpdated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectMarketingCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Marketing Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EditText__c</fullName>
        <formula>&quot;Edit&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EditText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FaxOptOut__c</fullName>
        <formula>Contact__r.HasOptedOutOfFax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>First Name of the Contact associated with Contact Relationship</description>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISGB_COMPANY_CD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISGB COMPANY CD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISGB_COMPANY_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISGB COMPANY DESC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Last Name of the contact associated with contact relationship</description>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Broker_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legacy Broker Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_BSNS_TERM_DT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NEW BSNS TERM DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NGBH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NBGH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameChanging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NameChanging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PARENT_ENC_TIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PARENT ENC TIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_ENCRYPTID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Paid ENCRYPTID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PastPresentAffiliation__c</fullName>
        <label>Past/Present Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Past</fullName>
                </value>
                <value>
                    <fullName>Present</fullName>
                    <default>true</default>
                    <label>Present</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegionalLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelationshipType__c</fullName>
        <inlineHelpText>If not employer related, name of charity, association or affiliation</inlineHelpText>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Prior Associate</fullName>
                </value>
                <value>
                    <fullName>Prior Employment</fullName>
                </value>
                <value>
                    <fullName>Association Affiliation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel_CD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Channel CD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAX_ENC_TIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TAX ENC TIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>They_Can__c</fullName>
        <label>They Can</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Influence</fullName>
                </value>
                <value>
                    <fullName>Decide</fullName>
                </value>
                <value>
                    <fullName>Manage</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>Bless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>They_Care_About_Organizationally__c</fullName>
        <label>They Care About Organizationally</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accuracy</fullName>
                </value>
                <value>
                    <fullName>Efficiency - Administrative</fullName>
                </value>
                <value>
                    <fullName>Efficiency - Operation</fullName>
                </value>
                <value>
                    <fullName>Efficiency - ACA, SOX Audits, and Analysis of Program Outcomes</fullName>
                </value>
                <value>
                    <fullName>Employee Relations - Member Abrasion</fullName>
                </value>
                <value>
                    <fullName>Employee Relations - Member Experience</fullName>
                </value>
                <value>
                    <fullName>Employee Relations - Member Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Employee Relations - Team Member Experience and Progress</fullName>
                </value>
                <value>
                    <fullName>ROI - Meeting Budget Goals</fullName>
                </value>
                <value>
                    <fullName>Meeting Corporate Goals</fullName>
                </value>
                <value>
                    <fullName>Industry Leader - Inclusion in Developing Healthcare Solutions</fullName>
                </value>
                <value>
                    <fullName>Industry Leader - Taking a Lead Role in Strategy</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>They_Speak_the_Language_of__c</fullName>
        <label>They Speak the Language of</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Results and Outcomes</fullName>
                </value>
                <value>
                    <fullName>Relationships and Trust</fullName>
                </value>
                <value>
                    <fullName>Ideas and Concepts</fullName>
                </value>
                <value>
                    <fullName>Process Flow and Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>They__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>They Care About Personally</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinLossSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Win Loss Survey</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Relationships</pluralLabel>
    <recordTypes>
        <fullName>AccountRelationships</fullName>
        <active>true</active>
        <label>Account Relationships</label>
    </recordTypes>
    <recordTypes>
        <fullName>AnthemAssociates</fullName>
        <active>true</active>
        <label>Anthem Associates</label>
    </recordTypes>
    <recordTypes>
        <fullName>AssociatedContacts</fullName>
        <active>true</active>
        <label>Associated Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConsultantContact</fullName>
        <active>true</active>
        <label>Consultant Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>GroupContact</fullName>
        <active>true</active>
        <label>Group Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_Brokerage_Consultant_Relationship</fullName>
        <active>true</active>
        <label>LG Brokerage Consultant Relationship</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ANA_VR_CRP01_RestrictsNameModification</fullName>
        <active>true</active>
        <description>Restricts to modify name</description>
        <errorConditionFormula>AND( 
!$User.BypassValidation__c, 
ISCHANGED(Name),
PRIORVALUE(Name)  &lt;&gt; null,
NameChanging__c = FALSE
 )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_LG_Brokerage_ConsultantRelationship</fullName>
        <active>true</active>
        <description>Data updated from ASCS cannot be modified.</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;LG Brokerage Consultant Relationship&quot;, 

NOT ( OR ( 
$Profile.Name = &quot;API User&quot;, 
$Profile.Name = &quot;System Administrator&quot; 
)), 

LastModifiedBy.Profile.Name = &quot;API User&quot; 

)</errorConditionFormula>
        <errorMessage>Data updated from ASCS cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>